Changed the wording on the Contact page

--- a/contact.html
+++ b/contact.html
@@ -6,15 +6,15 @@ layout: default-contact
 <div class="row">
    <div class="box">
        <h4>Discord: CorruptComputer#0001</h4>
-       <p>I use Discord a lot, and this is probably the fastest way to get in contact with me.
+       <p>I use Discord a lot, and this is sometimes the fastest way to get in contact with me.
        </p><hr />
 
        <h4>Email: <a href="mailto:nickolas@gupton.xyz">nickolas@gupton.xyz</a></h4>
-       <p>If you'd prefer, I also have an email. This is a more guaranteed way to get in contact with me, as I will see a notification as soon as I recieve it.
+       <p>If you'd prefer, you can send me an email as well. This is a more guaranteed way to get in contact with me, as I will always see a notification as soon as I recieve it.
        </p><hr />
 
        <h4>LinkedIn: <a href="https://www.linkedin.com/in/nickolasgupton/">Nickolas Gupton</a></h4>
-       <p>This should gove you some more info about me if you're looking for business reasons or just want to see where I currently work.
+       <p>This should give you some more info about me if you're looking for business reasons or just want to see more about where I work.
        </p><hr />
 
        <h4>GitHub: <a href="https://github.com/CorruptComputer">CorruptComputer</a></h4>
