Change skills section to be more sensible

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default-home
    <div class="box">
    <h2>Hello!</h2><hr />
    <p>
-      I started programming in high school, and had a great teacher. 
+      I started programming in high school, and had a great teacher who inspired me to keep learning. 
       My first language was Java and I will always remember my first <code>Hello world</code>. 
       Ever since then I have been trying to learn everything I can about programming. 
       The greatest aspect of computer programming to me is the endless possibility and the control that comes with writing software.
@@ -16,51 +16,58 @@ layout: default-home
    </div>
 </div>
 
-
 <h2>Skills I've picked up over the years:</h2>
 <div class="row">
     <div class="box">
-        <h2>Want to learn</h2><hr />
-        <ul>
-            <li>Python</li>
-            <li>Go</li>
-            <li>Haskell</li>
-            <li>Computer Vision</li>
-            <li>Machine Learning</li>
-        </ul>
-    </div>
-    <div class="box">
-        <h2>Currently learning</h2><hr />
-        <ul>
-            <li>VMware vCenter</li>
-            <li>Windows Server Management</li>
-            <li>Linux Server Management</li>
-            <li>Solarwinds</li>
-            <li>SCCM</li>
-        </ul>
-    </div>
-    <div class="box">
-        <h2>Somewhat competent</h2><hr />
-        <ul>
-            <li>Ruby/Jekyll</li>
-            <li>Unity3D</li>
-            <li>Unreal Engine</li>
-            <li>SQL</li>
-            <li>Active Directory</li>
-            <li>Group Policy Management</li>
-            <li>Powershell</li>
-            <li>G-Suite</li>
-        </ul>
-    </div>
-    <div class="box">
-        <h2>I use these a lot</h2><hr />
-        <ul>
-            <li>C++</li>
-            <li>Java</li>
-            <li>HTML/CSS/JavaScript</li>
-            <li>Linux</li>
-            <li>Git</li>
-        </ul>
+        <h2>Tech I've worked with:</h2><hr />
+        <div class="row">
+            <ul class="skills">
+                <li>C++</li>
+                <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="fas fa-circle"></i> </li>
+                <li>Java</li>
+                <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="fas fa-circle"></i> </li>
+                <li>HTML</li>
+                <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="fas fa-circle"></i> </li>
+                <li>CSS</li>
+                <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="fas fa-circle"></i> </li>
+                <li>Linux</li>
+                <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="far fa-circle"></i> </li>
+                <li>Git</li>
+                <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="far fa-circle"></i> </li>
+                <li>Active Directory</li>
+                <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="far fa-circle"></i> </li>
+            </ul>
+            <ul class="skills">
+                <li>JavaScript</li>
+                <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="far fa-circle"></i> </li>
+                <li>Ruby</li>
+                <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="far fa-circle"></i> </li>
+                <li>Jekyll</li>
+                <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="far fa-circle"></i> </li>
+                <li>Python</li>
+                <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="far fa-circle"></i> </li>
+                <li>Group Policy Management</li>
+                <li><i class="fas fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> </li>
+                <li>Powershell</li>
+                <li><i class="fas fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> </li>
+                <li>Windows Server Management</li>
+                <li><i class="fas fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> </li>
+            </ul>
+            <ul class="skills">
+                <li>SQL</li>
+                <li><i class="fas fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> </li>
+                <li>VMware vCenter</li>
+                <li><i class="fas fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> </li>
+                <li>Linux Server Management</li>
+                <li><i class="fas fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> </li>
+                <li>Solarwinds</li>
+                <li><i class="fas fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> </li>
+                <li>SCCM</li>
+                <li><i class="far fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> </li>
+                <li>Ruby on Rails</li>
+                <li><i class="far fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> </li>
+            </ul>
+        </div>
     </div>
 </div>
 
