Add ProtonDB to Steam Library to Maintaining
Create robots.txt and sitemap.xml for SEO

--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@ layout: default-home
       Ever since then I have been trying to learn everything I can about programming. 
       The greatest aspect of computer programming to me is the endless possibility and the control that comes with writing software.
       The amount of knowledge and skill is limited only to the will of the programmer and there is always something new to learn and improve!
-      <br />Below you will find some more information about me and what I am currently doing:
+      <br />Below you will find some more information about me and what I am currently doing.
    </p>
    </div>
 </div>
 
-<h2>Skills I've picked up over the years:</h2>
 <div class="row">
     <div class="box">
         <h2>Tech I've worked with:</h2><hr />
@@ -34,17 +33,17 @@ layout: default-home
                 <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="far fa-circle"></i> </li>
                 <li>Git</li>
                 <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="far fa-circle"></i> </li>
-                <li>Active Directory</li>
+                <li>Python</li>
                 <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="far fa-circle"></i> </li>
             </ul>
             <ul class="skills">
+                <li>Active Directory</li>
+                <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="far fa-circle"></i> </li>
                 <li>JavaScript</li>
                 <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="far fa-circle"></i> </li>
                 <li>Ruby</li>
                 <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="far fa-circle"></i> </li>
                 <li>Jekyll</li>
-                <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="far fa-circle"></i> </li>
-                <li>Python</li>
                 <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="far fa-circle"></i> </li>
                 <li>Group Policy Management</li>
                 <li><i class="fas fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> </li>
@@ -54,6 +53,8 @@ layout: default-home
                 <li><i class="fas fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> </li>
             </ul>
             <ul class="skills">
+                <li>PHP</li>
+                <li><i class="fas fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> </li>
                 <li>SQL</li>
                 <li><i class="fas fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> </li>
                 <li>VMware vCenter</li>
@@ -76,8 +77,8 @@ layout: default-home
     <div class="box">
         <h2>Currently</h2><hr />
         <div>
-            <h4><a href="https://www.angelo.edu/services/technology/">Server Technician - Angelo State University</a></h4>
-            <p >April 2018 - Present</p>
+            <h4><a href="https://www.angelo.edu/services/technology/" target="_blank">Server Technician - Angelo State University</a></h4>
+            <p>April 2018 - Present</p>
             <p>
                 I am part of a team which manages our data center and virtual servers, along with Active Directory and Group Policy for the campus.
                 Virtual server creation and maintenance, monitoring the status of servers and services, 
@@ -90,12 +91,12 @@ layout: default-home
     <div class="box">
         <h2>Previously</h2><hr />
         <div>
-            <h4><a href="http://www.generationspaintball.com">Web Administrator - Generations Paintball</a></h4>
+            <h4><a href="http://www.generationspaintball.com" target="_blank">Web Administrator - Generations Paintball</a></h4>
             <p>February 2016 - August 2017</p>
             <p>I redesigned their website, making it accessible to mobile devices and allowing more customers to interact and learn about the business.</p>
             <p>Used: Git, HTML/CSS/JavaScript</p>
             
-            <h4><a href="https://www.angelo.edu/dept/computer_science/">Code Camp Assistant - Angelo State University</a></h4>
+            <h4><a href="https://www.angelo.edu/dept/computer_science/" target="_blank">Code Camp Assistant - Angelo State University</a></h4>
             <p>June 2017</p>
             <p>Taught students about Java and Unity3D and assisted them on their projects.</p>
             <p>Used: Java, Unity3D</p>
@@ -108,11 +109,12 @@ layout: default-home
     <div class="box">
         <h2>In Development</h2><hr />
         <div>
-            <h4><a href="https://www.angelo.edu/">College!</a></h4>
+            <h4><a href="https://www.angelo.edu/" target="_blank">College!</a></h4>
             <p>
                 I am currently a college student at Angelo State University, studying Computer Science and Cybersecurity. 
-                I am in my senior year now, and will be graduating in the fall of 2019.
-                When I graduate I will have a Bachelors of Science in Computer Science with a minor in Cybersecurity, along with a certificate in Cybersecurity.
+                I am in my senior year now, and will be graduating in December of 2019.
+                When I graduate I will have a Bachelors of Science in Computer Science with a minor in Cybersecurity, 
+                along with certificates in Cybersecurity, Cybersecurity Technologies, and Web and Mobile Development.
                 <br />Relevant courses I have taken:
                   <ul>
                      <li>Computer Science 1</li>
@@ -129,45 +131,51 @@ layout: default-home
                      <li>Software Engineering</li>
                      <li>Operating Systems</li>
                      <li>Ethical Issues in Computing</li>
+                     <li>Internet Technologies</li>
                      <li>Management Information Systems</li>
                      <li>Information Security and Protection</li>
                      <li>Digital Footprints</li>
                   </ul>
-                <br />Used: Assembly, C++, C#, Java, JavaScript, Python, Unity3D
+                <br />Used: Assembly, C++, C#, Java, JavaScript, PHP, Python, Unity3D
             </p>
         </div>
     </div>
     <div class="box">
         <h2>Maintaining</h2><hr />
         <div>
-            <h4><a href="https://github.com/CorruptComputer/Officer-Beepsky">Officer-Beepsky</a>:</h4>
+            <h4><a href="https://github.com/CorruptComputer/Officer-Beepsky" target="_blank">Officer-Beepsky</a>:</h4>
             <p>
                 Officer-Beepsky is an open source Discord bot. 
                 I made it for some friends and me to use in order to play music and manage our server. 
                 It is built with Discord4J as its main API to use to connect to Discord.
                 <br />Used: Bash, Git, Gradle, Java, PowerShell
             </p>
-            <h4><a href="https://github.com/CorruptComputer/CorruptComputer.GitHub.io">My Website</a>:</h4>
+            <h4><a href="https://github.com/CorruptComputer/CorruptComputer.GitHub.io" target="_blank">My Website</a>:</h4>
             <p>
                 The site you're currently looking at. 
                 I am not a frontend developer, but I hope it still looks alright!
                 <br />Used: CSS, Git, HTML, JavaScript, Jekyll, Ruby
+            </p>
+            <h4><a href="https://github.com/CorruptComputer/ProtonDB-to-Steam-Library" target="_blank">ProtonDB to Steam Library</a>:</h4>
+            <p>
+                This script takes ProtonDB ratings and imports them into your Steam library as tags.
+                <br />Used: Git, Python
             </p>
         </div>
     </div>
     <div class="box">
         <h2>End of Life</h2><hr />
         <div>
-            <h4><a href="https://github.com/CorruptComputer/ASU-Team-Juice-Compiler">Team Juice Compiler</a>:</h4>
+            <h4><a href="https://github.com/CorruptComputer/ASU-Team-Juice-Compiler" target="_blank">Team Juice Compiler</a>:</h4>
             <p>
                 This is the compiler that was was written by my group (Team Juice) in my senior level Compilers class.
-                This was a collaborative effort by <a href="https://github.com/texaszn">Zachary N.</a> and myself, 
-                it takes Pascallite code and generates RAMM Assembly code as the resault. This was written in three stages over the course of 3 months, 
-                however only our final code resault is available in the repository (along with some easter eggs in the code). 
+                This was a collaborative effort by <a href="https://github.com/texaszn" target="_blank">Zachary N.</a> and myself, 
+                it takes Pascallite code and generates RAMM Assembly code as the result. This was written in three stages over the course of 3 months, 
+                however only our final code result is available in the repository (along with some easter eggs in the code). 
                 I plan on rewriting this in other languages as I learn them.
                 <br />Used: C++, Git, Pascallite, RAMM
             </p>
-            <h4><a href="https://github.com/tgstation/tgstation">/tg/ Station 13: Asteroid Station</a>:</h4>
+            <h4><a href="https://github.com/tgstation/tgstation" target="_blank">/tg/ Station 13: Asteroid Station</a>:</h4>
             <p>
                 Asteroid Station was a collaborative effort between myself and Jordie0608. 
                 It was an ambitious project, a large space station set inside of an Asteroid, and it was fairly popular during its lifetime. 
