--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ layout: default-home
                      <li>Java Programming</li>
                      <li>Data Structures</li>
                      <li>Web programming</li>
-                     <li>Computer Organization</li>
+                     <li>Computer Organization (Assembly)</li>
                      <li>Algorithmic Languages and Compilers</li>
                      <li>Computer Networking</li>
                      <li>Computer and Network Security</li>
@@ -132,9 +132,13 @@ layout: default-home
                      <li>Operating Systems</li>
                      <li>Ethical Issues in Computing</li>
                      <li>Internet Technologies</li>
+                     <li>Principles of Unix</li>
+                     <li>Theory of Algorithms</li>
+                     <li>Mobile Game Development (Android)</li>
                      <li>Management Information Systems</li>
                      <li>Information Security and Protection</li>
                      <li>Digital Footprints</li>
+                     <li>Critical Communication Infrastructure</li>
                   </ul>
                 <br />Used: Assembly, C++, C#, Java, JavaScript, PHP, Python, Unity3D
             </p>
@@ -156,10 +160,10 @@ layout: default-home
                 I am not a frontend developer, but I hope it still looks alright!
                 <br />Used: CSS, Git, HTML, JavaScript, Jekyll, Ruby
             </p>
-            <h4><a href="https://github.com/CorruptComputer/ProtonDB-to-Steam-Library" target="_blank">ProtonDB to Steam Library</a>:</h4>
+            <h4><a href="https://github.com/CorruptComputer/ProtonDB-Tags" target="_blank">ProtonDB Tags</a>:</h4>
             <p>
                 This script takes ProtonDB ratings and imports them into your Steam library as tags.
-                <br />Used: Git, Python
+                <br />Used: Git, Python, Web API's
             </p>
         </div>
     </div>
