Update wording of top paragraph and end date for employment

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ layout: default-home
    <div class="box">
    <h2>Hello!</h2><hr />
    <p>
-      I started programming in high school, and had a great teacher who inspired me to keep learning. 
+      I started programming in high school, and had a great teacher who inspired me to always keep learning. 
       My first language was Java and I will always remember my first <code>Hello world</code>. 
-      Ever since then I have been trying to learn everything I can about programming. 
+      Ever since then I have been trying to learn everything I can about programming and software systems. 
       The greatest aspect of computer programming to me is the endless possibility and the control that comes with writing software.
       The amount of knowledge and skill is limited only to the will of the programmer and there is always something new to learn and improve!
       <br />Below you will find some more information about me and what I am currently doing.
@@ -78,7 +78,7 @@ layout: default-home
         <h2>Currently</h2><hr />
         <div>
             <h4><a href="https://www.angelo.edu/services/technology/" target="_blank">Server Technician - Angelo State University</a></h4>
-            <p>April 2018 - Present</p>
+            <p>April 2018 - December 2019</p>
             <p>
                 I am part of a team which manages our data center and virtual servers, along with Active Directory and Group Policy for the campus.
                 Virtual server creation and maintenance, monitoring the status of servers and services, 
@@ -109,7 +109,7 @@ layout: default-home
     <div class="box">
         <h2>In Development</h2><hr />
         <div>
-            <h4><a href="https://www.angelo.edu/" target="_blank">College!</a></h4>
+            <h4><a href="https://www.angelo.edu/dept/computer_science/" target="_blank">College!</a></h4>
             <p>
                 I am currently a college student at Angelo State University, studying Computer Science and Cybersecurity. 
                 I am in my senior year now, and will be graduating in December of 2019.
@@ -117,9 +117,6 @@ layout: default-home
                 along with certificates in Cybersecurity, Cybersecurity Technologies, and Web and Mobile Development.
                 <br />Relevant courses I have taken:
                   <ul>
-                     <li>Computer Science 1</li>
-                     <li>Computer Science 2</li>
-                     <li>Computer Game Development 1</li>
                      <li>Java Programming</li>
                      <li>Data Structures</li>
                      <li>Web programming</li>
@@ -140,7 +137,7 @@ layout: default-home
                      <li>Digital Footprints</li>
                      <li>Critical Communication Infrastructure</li>
                   </ul>
-                <br />Used: Assembly, C++, C#, Java, JavaScript, PHP, Python, Unity3D
+                <br />Used: Assembly, Bash, C, C++, C#, Java, JavaScript, Linux, PHP, Python, Unity3D
             </p>
         </div>
     </div>
