Update info in 'Hello!' box

--- a/index.html
+++ b/index.html
@@ -3,17 +3,23 @@ layout: default-home
 ---
 
 <div class="row">
-   <div class="box">
-   <h2>Hello!</h2><hr />
-   <p>
-      I started programming in high school, and had a great teacher who inspired me to always keep learning. 
-      My first language was Java and I will always remember my first <code>Hello world</code>. 
-      Ever since then I have been trying to learn everything I can about programming and software systems. 
-      The greatest aspect of computer programming to me is the endless possibility and the control that comes with writing software.
-      The amount of knowledge and skill is limited only to the will of the programmer and there is always something new to learn and improve!
-      <br />Below you will find some more information about me and what I am currently doing.
-   </p>
-   </div>
+    <div class="box">
+    <h2>Hello!</h2><hr />
+    <p>
+        I started programming in High School, and have had a passion for it ever since. 
+        The first language I ever used was Java and it will always have a soft spot in my heart, however since then I have learned and grown to love many other languages such as C, C++, Python, and JavaScript. 
+        The best thing to me about being a Software Developer is the constant need to learn and hone your skills with how quickly new technologies and best practices are released.
+        Currently I am still a student at Angelo State University, however I will be graduating in less than a month. 
+        <br />This leaves me available for employment if anyone believes I may be a good fit!
+        <br />
+        <br />Some qualities about myself that I think are important:
+        <br />I write readable code: if no one can read the code and edit it that does nothing but hurt everyone in the long run.
+        <br />Documentation is just as important as code: if you write an awesome program and no one knows how to use it, then its not a useful one.
+        <br />Always improve and learn: this field moves so quickly compared to others, if you are not constantly learning you'll end up getting left behind.
+        <br />
+        <br />Below you will find some more information about me and what I am currently doing.
+    </p>
+    </div>
 </div>
 
 <div class="row">
@@ -116,27 +122,27 @@ layout: default-home
                 When I graduate I will have a Bachelors of Science in Computer Science with a minor in Cybersecurity, 
                 along with certificates in Cybersecurity, Cybersecurity Technologies, and Web and Mobile Development.
                 <br />Relevant courses I have taken:
-                  <ul>
-                     <li>Java Programming</li>
-                     <li>Data Structures</li>
-                     <li>Web programming</li>
-                     <li>Computer Organization (Assembly)</li>
-                     <li>Algorithmic Languages and Compilers</li>
-                     <li>Computer Networking</li>
-                     <li>Computer and Network Security</li>
-                     <li>Offensive Security Techniques</li>
-                     <li>Software Engineering</li>
-                     <li>Operating Systems</li>
-                     <li>Ethical Issues in Computing</li>
-                     <li>Internet Technologies</li>
-                     <li>Principles of Unix</li>
-                     <li>Theory of Algorithms</li>
-                     <li>Mobile Game Development (Android)</li>
-                     <li>Management Information Systems</li>
-                     <li>Information Security and Protection</li>
-                     <li>Digital Footprints</li>
-                     <li>Critical Communication Infrastructure</li>
-                  </ul>
+                    <ul>
+                        <li>Java Programming</li>
+                        <li>Data Structures</li>
+                        <li>Web programming</li>
+                        <li>Computer Organization (Assembly)</li>
+                        <li>Algorithmic Languages and Compilers</li>
+                        <li>Computer Networking</li>
+                        <li>Computer and Network Security</li>
+                        <li>Offensive Security Techniques</li>
+                        <li>Software Engineering</li>
+                        <li>Operating Systems</li>
+                        <li>Ethical Issues in Computing</li>
+                        <li>Internet Technologies</li>
+                        <li>Principles of Unix</li>
+                        <li>Theory of Algorithms</li>
+                        <li>Mobile Game Development (Android)</li>
+                        <li>Management Information Systems</li>
+                        <li>Information Security and Protection</li>
+                        <li>Digital Footprints</li>
+                        <li>Critical Communication Infrastructure</li>
+                    </ul>
                 <br />Used: Assembly, Bash, C, C++, C#, Java, JavaScript, Linux, PHP, Python, Unity3D
             </p>
         </div>
