Update current job and projects

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@ layout: default-home
         I started programming in High School, and have had a passion for it ever since. 
         The first language I ever used was Java and it will always have a soft spot in my heart, however since then I have learned and grown to love many other languages such as C, C++, Python, and JavaScript. 
         The best thing to me about being a Software Developer is the constant need to learn and hone your skills with how quickly new technologies and best practices are released.
-        Currently I am still a student at Angelo State University, however I will be graduating in less than a month. 
-        <br />This leaves me available for employment if anyone believes I may be a good fit!
         <br />
         <br />Some qualities about myself that I think are important:
         <br />I write readable code: if no one can read the code and edit it that does nothing but hurt everyone in the long run.
@@ -37,12 +35,16 @@ layout: default-home
                 <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="fas fa-circle"></i> </li>
                 <li>Linux</li>
                 <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="far fa-circle"></i> </li>
+                <li>Angular</li>
+                <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="far fa-circle"></i> </li>
+                <li>ReactJS</li>
+                <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="far fa-circle"></i> </li>
+            </ul>
+            <ul class="skills">
                 <li>Git</li>
                 <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="far fa-circle"></i> </li>
                 <li>Python</li>
                 <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="far fa-circle"></i> </li>
-            </ul>
-            <ul class="skills">
                 <li>Active Directory</li>
                 <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="far fa-circle"></i> </li>
                 <li>JavaScript</li>
@@ -53,12 +55,12 @@ layout: default-home
                 <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="far fa-circle"></i> </li>
                 <li>Group Policy Management</li>
                 <li><i class="fas fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> </li>
+            </ul>
+            <ul class="skills">
                 <li>Powershell</li>
                 <li><i class="fas fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> </li>
                 <li>Windows Server Management</li>
                 <li><i class="fas fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> </li>
-            </ul>
-            <ul class="skills">
                 <li>PHP</li>
                 <li><i class="fas fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> </li>
                 <li>SQL</li>
@@ -67,10 +69,6 @@ layout: default-home
                 <li><i class="fas fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> </li>
                 <li>Linux Server Management</li>
                 <li><i class="fas fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> </li>
-                <li>Solarwinds</li>
-                <li><i class="fas fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> </li>
-                <li>SCCM</li>
-                <li><i class="far fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> </li>
                 <li>Ruby on Rails</li>
                 <li><i class="far fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> </li>
             </ul>
@@ -83,29 +81,21 @@ layout: default-home
     <div class="box">
         <h2>Currently</h2><hr />
         <div>
-            <h4><a href="https://www.angelo.edu/services/technology/" target="_blank">Server Technician - Angelo State University</a></h4>
-            <p>April 2018 - December 2019</p>
+            <h4><a href="https://www.capgemini.com/" target="_blank">Associate Consultant: Software Engineering - Capgemini</a></h4>
+            <p>February 2020 - Present</p>
             <p>
-                I am part of a team which manages our data center and virtual servers, along with Active Directory and Group Policy for the campus.
-                Virtual server creation and maintenance, monitoring the status of servers and services, 
-                writing documentation, and managing our tape backup library are main things which I currently do. 
-                I also occasionally setup physical hosts and appliances.
+                I am a software engineer working at Capgemini in their Financial Services division.
             </p>
-            <p>Used: Active Directory, Bash, Group Policy Management, Linux Server Management, PowerShell, SQL, SCCM, Solarwinds, VMware vCenter, Windows Server Management</p>
+            <p>Used: Angular, Git, JavaScript, TypeScript, ReactJS, NodeJS, MongoDB, Java</p>
         </div>
     </div>
     <div class="box">
         <h2>Previously</h2><hr />
         <div>
-            <h4><a href="http://www.generationspaintball.com" target="_blank">Web Administrator - Generations Paintball</a></h4>
-            <p>February 2016 - August 2017</p>
-            <p>I redesigned their website, making it accessible to mobile devices and allowing more customers to interact and learn about the business.</p>
-            <p>Used: Git, HTML/CSS/JavaScript</p>
-            
-            <h4><a href="https://www.angelo.edu/dept/computer_science/" target="_blank">Code Camp Assistant - Angelo State University</a></h4>
-            <p>June 2017</p>
-            <p>Taught students about Java and Unity3D and assisted them on their projects.</p>
-            <p>Used: Java, Unity3D</p>
+            <h4><a href="https://www.angelo.edu/services/technology/" target="_blank">Server Technician - Angelo State University</a></h4>
+            <p>April 2018 - December 2019</p>
+            <p>I was part of a team which managed their data center and virtual servers, along with Active Directory and Group Policy for the campus.</p>
+            <p>Used: Active Directory, Bash, Group Policy Management, Linux Server Management, PowerShell, SQL, SCCM, Solarwinds, VMware vCenter, Windows Server Management</p>
         </div>
     </div>
 </div>
@@ -115,35 +105,9 @@ layout: default-home
     <div class="box">
         <h2>In Development</h2><hr />
         <div>
-            <h4><a href="https://www.angelo.edu/dept/computer_science/" target="_blank">College!</a></h4>
+            <h4>Nothing currently...</h4>
             <p>
-                I am currently a college student at Angelo State University, studying Computer Science and Cybersecurity. 
-                I am in my senior year now, and will be graduating in December of 2019.
-                When I graduate I will have a Bachelors of Science in Computer Science with a minor in Cybersecurity, 
-                along with certificates in Cybersecurity, Cybersecurity Technologies, and Web and Mobile Development.
-                <br />Relevant courses I have taken:
-                    <ul>
-                        <li>Java Programming</li>
-                        <li>Data Structures</li>
-                        <li>Web programming</li>
-                        <li>Computer Organization (Assembly)</li>
-                        <li>Algorithmic Languages and Compilers</li>
-                        <li>Computer Networking</li>
-                        <li>Computer and Network Security</li>
-                        <li>Offensive Security Techniques</li>
-                        <li>Software Engineering</li>
-                        <li>Operating Systems</li>
-                        <li>Ethical Issues in Computing</li>
-                        <li>Internet Technologies</li>
-                        <li>Principles of Unix</li>
-                        <li>Theory of Algorithms</li>
-                        <li>Mobile Game Development (Android)</li>
-                        <li>Management Information Systems</li>
-                        <li>Information Security and Protection</li>
-                        <li>Digital Footprints</li>
-                        <li>Critical Communication Infrastructure</li>
-                    </ul>
-                <br />Used: Assembly, Bash, C, C++, C#, Java, JavaScript, Linux, PHP, Python, Unity3D
+                This will be updated as I start new projects!
             </p>
         </div>
     </div>
