--- a/index.html
+++ b/index.html
@@ -4,73 +4,91 @@ layout: default-home
 
 <div class="row">
     <div class="box">
-    <h2>Hello!</h2><hr />
+    <h2>Hello there!</h2><hr />
     <p>
         I started programming in High School, and have had a passion for it ever since. 
         The first language I ever used was Java and it will always have a soft spot in my heart, however since then I have learned and grown to love many other languages such as C, C++, Python, and JavaScript. 
         The best thing to me about being a Software Developer is the constant need to learn and hone your skills with how quickly new technologies and best practices are released.
         <br />
-        <br />Some qualities about myself that I think are important:
-        <br />I write readable code: if no one can read the code and edit it that does nothing but hurt everyone in the long run.
-        <br />Documentation is just as important as code: if you write an awesome program and no one knows how to use it, then its not a useful one.
-        <br />Always improve and learn: this field moves so quickly compared to others, if you are not constantly learning you'll end up getting left behind.
+        <br /> Some qualities about myself that I think are important:
+        <br /> I write readable code: if no one can read the code and edit it that does nothing but hurt everyone in the long run.
+        <br /> Documentation is just as important as code: if you write an awesome program and no one knows how to use it, then its not a useful one.
+        <br /> Always improve and learn: this field moves so quickly compared to others, if you are not constantly learning you'll end up getting left behind.
         <br />
-        <br />Below you will find some more information about me and what I am currently doing.
+        <br /> Below you will find some more information about me and what I am currently doing..
     </p>
     </div>
 </div>
 
+<h2>What I do:</h2>
 <div class="row">
     <div class="box">
-        <h2>Tech I've worked with:</h2><hr />
+        <h2>Programming:</h2><hr />
         <div class="row">
             <ul class="skills">
-                <li>C++</li>
-                <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="fas fa-circle"></i> </li>
-                <li>Java</li>
-                <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="fas fa-circle"></i> </li>
-                <li>HTML</li>
-                <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="fas fa-circle"></i> </li>
-                <li>CSS</li>
-                <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="fas fa-circle"></i> </li>
-                <li>Linux</li>
-                <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="far fa-circle"></i> </li>
-                <li>Angular</li>
-                <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="far fa-circle"></i> </li>
-                <li>ReactJS</li>
-                <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="far fa-circle"></i> </li>
-            </ul>
-            <ul class="skills">
                 <li>Git</li>
-                <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="far fa-circle"></i> </li>
-                <li>Python</li>
-                <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="far fa-circle"></i> </li>
-                <li>Active Directory</li>
-                <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="far fa-circle"></i> </li>
-                <li>JavaScript</li>
-                <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="far fa-circle"></i> </li>
-                <li>Ruby</li>
-                <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="far fa-circle"></i> </li>
+                <li>7+ years</li> <!-- 2014-> -->
+                <li>Java</li>
+                <li>7+ years</li> <!-- 2014-> -->
+                <li>HTML</li>
+                <li>7+ years</li> <!-- 2014-> -->
+                <li>CSS</li>
+                <li>7+ years</li> <!-- 2014-> -->
+                <li>JavaScript/TypeScript</li>
+                <li>7+ years</li> <!-- 2014-> -->
                 <li>Jekyll</li>
-                <li><i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="far fa-circle"></i> </li>
-                <li>Group Policy Management</li>
-                <li><i class="fas fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> </li>
+                <li>7+ years</li> <!-- 2014-> -->
+                <li>Linux</li>
+                <li>7+ years</li> <!-- 2014-> -->
+                <li>Python</li>
+                <li>5+ years</li> <!-- 2016-> -->
+                <li>C++</li>
+                <li>4 years</li> <!-- 2016->2020 -->
             </ul>
             <ul class="skills">
-                <li>Powershell</li>
-                <li><i class="fas fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> </li>
-                <li>Windows Server Management</li>
-                <li><i class="fas fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> </li>
-                <li>PHP</li>
-                <li><i class="fas fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> </li>
                 <li>SQL</li>
-                <li><i class="fas fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> </li>
-                <li>VMware vCenter</li>
-                <li><i class="fas fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> </li>
+                <li>3+ years</li> <!-- 2018-> -->
+                <li>PHP</li>
+                <li>2 years</li> <!-- 2019->2020 -->
+                <li>C#</li>
+                <li>1+ year</li> <!-- 2020-> -->
+                <li>.NET Framework</li>
+                <li>1+ year</li> <!-- 2020-> -->
+                <li>.NET Core</li>
+                <li>1+ year</li> <!-- 2020-> -->
+                <li>ASP.NET</li>
+                <li>1+ year</li> <!-- 2020-> -->
+                <li>Angular</li>
+                <li>1+ year</li> <!-- 2020-> -->
+                <li>ReactJS</li>
+                <li>1+ year</li> <!-- 2020-> -->
+                <li>MongoDB</li>
+                <li>1+ year</li> <!-- 2020-> -->
+            </ul>
+        </div>
+    </div>
+    <div class="box">
+        <h2>Tech:</h2><hr />
+        <div class="row">
+            <ul class="skills">
                 <li>Linux Server Management</li>
-                <li><i class="fas fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> </li>
-                <li>Ruby on Rails</li>
-                <li><i class="far fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> </li>
+                <li>5+ years</li> <!-- 2016-> -->
+                <li>Bash</li>
+                <li>5+ years</li> <!-- 2016-> -->
+                <li>Active Directory</li>
+                <li>2 years</li> <!-- 2018->2020 -->
+                <li>Group Policy Management</li>
+                <li>2 years</li> <!-- 2018->2020 -->
+                <li>Powershell</li>
+                <li>2 years</li> <!-- 2018->2020 -->
+                <li>Windows Server Management</li>
+                <li>2 years</li> <!-- 2018->2020 -->
+                <li>VMware vCenter</li>
+                <li>2 years</li> <!-- 2018->2020 -->
+                <li>SolarWinds</li>
+                <li>2 years</li> <!-- 2018->2020 -->
+                <li>SCCM</li>
+                <li>2 years</li> <!-- 2018->2020 -->
             </ul>
         </div>
     </div>
@@ -86,7 +104,7 @@ layout: default-home
             <p>
                 I am a software engineer working at Capgemini in their Financial Services division.
             </p>
-            <p>Used: Angular, Git, JavaScript, TypeScript, ReactJS, NodeJS, MongoDB, Java</p>
+            <p>Used: Angular, Git, JavaScript, TypeScript, ReactJS, NodeJS, MongoDB, Java, C#, .NET Framework, .NET Core, ASP.NET, SQL</p>
         </div>
     </div>
     <div class="box">
@@ -95,7 +113,7 @@ layout: default-home
             <h4><a href="https://www.angelo.edu/services/technology/" target="_blank">Server Technician - Angelo State University</a></h4>
             <p>April 2018 - December 2019</p>
             <p>I was part of a team which managed their data center and virtual servers, along with Active Directory and Group Policy for the campus.</p>
-            <p>Used: Active Directory, Bash, Group Policy Management, Linux Server Management, PowerShell, SQL, SCCM, Solarwinds, VMware vCenter, Windows Server Management</p>
+            <p>Used: Active Directory, Bash, Group Policy Management, Linux Server Management, PowerShell, SQL, SCCM, SolarWinds, VMware vCenter, Windows Server Management</p>
         </div>
     </div>
 </div>
@@ -114,13 +132,6 @@ layout: default-home
     <div class="box">
         <h2>Maintaining</h2><hr />
         <div>
-            <h4><a href="https://github.com/CorruptComputer/Officer-Beepsky" target="_blank">Officer-Beepsky</a>:</h4>
-            <p>
-                Officer-Beepsky is an open source Discord bot. 
-                I made it for some friends and me to use in order to play music and manage our server. 
-                It is built with Discord4J as its main API to use to connect to Discord.
-                <br />Used: Bash, Git, Gradle, Java, PowerShell
-            </p>
             <h4><a href="https://github.com/CorruptComputer/CorruptComputer.GitHub.io" target="_blank">My Website</a>:</h4>
             <p>
                 The site you're currently looking at. 
@@ -137,6 +148,13 @@ layout: default-home
     <div class="box">
         <h2>End of Life</h2><hr />
         <div>
+            <h4><a href="https://github.com/CorruptComputer/Officer-Beepsky" target="_blank">Officer-Beepsky</a>:</h4>
+            <p>
+                Officer-Beepsky is an open source Discord bot. 
+                I made it for some friends and me to use in order to play music and manage our server. 
+                It is built with Discord4J as its main API to use to connect to Discord.
+                <br />Used: Bash, Git, Gradle, Java, PowerShell
+            </p>
             <h4><a href="https://github.com/CorruptComputer/ASU-Team-Juice-Compiler" target="_blank">Team Juice Compiler</a>:</h4>
             <p>
                 This is the compiler that was was written by my group (Team Juice) in my senior level Compilers class.
@@ -145,13 +163,6 @@ layout: default-home
                 however only our final code result is available in the repository (along with some easter eggs in the code). 
                 I plan on rewriting this in other languages as I learn them.
                 <br />Used: C++, Git, Pascallite, RAMM
-            </p>
-            <h4><a href="https://github.com/tgstation/tgstation" target="_blank">/tg/ Station 13: Asteroid Station</a>:</h4>
-            <p>
-                <a href="https://tgstation13.org/wiki/AsteroidStation" target="_blank">Asteroid Station</a> was a collaborative effort between myself and <a href="https://github.com/Jordie0608" target="_blank">Jordie0608</a>. 
-                It was an ambitious project, a large space station set inside of an Asteroid, and it was fairly popular during its lifetime. 
-                Sadly however was never completely finished and now with the codebase moving on without it, it sadly is no longer maintained.
-                <br />Used: BYOND DreamMaker, Git
             </p>
         </div>
     </div>
