--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 sitemap:
-  lastmod: 2021-03-07 12:00:00
+  lastmod: 2021-03-08 21:00:00
 ---
 
 <div class="row">
@@ -13,11 +13,11 @@ sitemap:
         The best thing to me about being a Software Developer is the constant need to learn and hone your skills with how quickly new technologies and best practices are released.
         <br />
         <br /> Some qualities about myself that I think are important:
-        <br /> I write readable code: if no one can read the code and edit it that does nothing but hurt everyone in the long run.
-        <br /> Documentation is just as important as code: if you write an awesome program and no one knows how to use it, then its not a useful one.
+        <br /> Write readable code: if no one can read the code and edit it that does nothing but hurt everyone in the long run.
+        <br /> Documentation is just as important as code: if you write some awesome piece of software and no one knows how to use it, then its not a useful one.
         <br /> Always improve and learn: this field moves so quickly compared to others, if you are not constantly learning you'll end up getting left behind.
         <br />
-        <br /> Below you will find some more information about me and what I am currently doing..
+        <br /> Below you will find some more information about me and what I am currently doing.
     </p>
     </div>
 </div>
@@ -137,7 +137,7 @@ sitemap:
             <h4><a href="https://github.com/CorruptComputer/CorruptComputer.GitHub.io" target="_blank">My Website</a>:</h4>
             <p>
                 The site you're currently looking at. 
-                I am not a frontend developer, but I hope it still looks alright!
+                I am not a designer, but I hope it still looks alright!
                 <br />Used: CSS, Git, HTML, JavaScript, Jekyll, Ruby
             </p>
             <h4><a href="https://github.com/CorruptComputer/ProtonDB-Tags" target="_blank">ProtonDB Tags</a>:</h4>
